--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)https://getbootstrap.com/docs/4.0/examples/jumbotron/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,75 +6,68 @@
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Digital Trip - ferryboat</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Estilo do  CSS -->
     <link href="./css/jumbotron.css" rel="stylesheet">
   </head>
 
   <body>
-
+			<!-- barra de navegação -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Navbar</a>
+      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#"><span style="color:#0d7fd6;">Digital</span>Trip</a>|
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
+
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Link</a>
+
+	   <li class="nav-item active">
+            <a class="nav-link" href="#">Projeto <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Disabled</a>
+
+	   <li class="nav-item active">
+            <a class="nav-link" href="#">Equipe <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com/" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Action</a>
-              <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Another action</a>
-              <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#">Something else here</a>
-            </div>
+       </div>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+           </div>
     </nav>
 
     <main role="main">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <!-- Parte de bem vindo-->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Hello, world!</h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <p><a class="btn btn-primary btn-lg" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#" role="button">Learn more »</a></p>
+          <h1 class="display-3">Bem Vindo</h1>
+          <p>Esse é o website oficial da DigitalTrip, aqui você irá encontrar inovação,</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
         </div>
       </div>
 
       <div class="container">
-        <!-- Example row of columns -->
+        <!-- parte de baixo -->
         <div class="row">
           <div class="col-md-4">
             <h2>Heading</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#" role="button">View details »</a></p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-md-4">
             <h2>Heading</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#" role="button">View details »</a></p>
+            <p><a class="btn btn-secondary"  href="#" role="button">View details »</a></p>
           </div>
           <div class="col-md-4">
             <h2>Heading</h2>
@@ -91,7 +83,7 @@
     </main>
 
     <footer class="container">
-      <p>© Company 2017-2018</p>
+      <p align="left">© DigitalTrip | 2022</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
