--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   <body>
 			<!-- barra de navegação -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#"><span style="color:#0d7fd6;">Digital</span>Trip</a>|
+      <a class="navbar-brand" href="#" style="font-size:2em;"><span style="color:#0d7fd6;">Digital</span>Trip</a>|
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+        <ul class="navbar-nav mr-auto" style="position:absolute; right:20px;">
+          <li class="nav-item active" >
+            <a class="nav-link" href="index.html" >inicio <span class="sr-only">(current)</span></a>
           </li>
 
 	   <li class="nav-item active">
@@ -37,7 +37,7 @@
           </li>
 
 	   <li class="nav-item active">
-            <a class="nav-link" href="#">Equipe <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="equipe.html">Equipe <span class="sr-only">(current)</span></a>
           </li>
        </div>
           </li>
@@ -52,7 +52,7 @@
         <div class="container">
           <h1 class="display-3">Bem Vindo</h1>
           <p>Esse é o website oficial da DigitalTrip, aqui você irá encontrar inovação,</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais »</a></p>
         </div>
       </div>
 
@@ -65,12 +65,12 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Heading</h2>
+            <h2>Projeto</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-secondary"  href="#" role="button">View details »</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Heading</h2>
+            <h2>Equipe</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#" role="button">View details »</a></p>
           </div>
@@ -83,7 +83,7 @@
     </main>
 
     <footer class="container">
-      <p align="left">© DigitalTrip | 2022</p>
+      <p align="center">© DigitalTrip | 2022</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
