--- a/equipe.html
+++ b/equipe.html
@@ -47,12 +47,12 @@
 <div class="row">
     <div class="column">
       <div class="card">
-        <img src="https://onlyinfluencers.com/images/easyblog_articles/763/b2ap3_thumbnail_phelan_small.png" alt="Ornelas" style="width:40%" class="borda">
+        <img src="./imagens/delasmini.jpg" alt="Ornelas" style="width:40%" class="borda">
         <div class="container">
           <h2>Gustavo Ornelas</h2>
           <p class="title">CEO &amp; Founder</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>gustavo.mariinho06@gmail.com</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -60,13 +60,13 @@
 
     <div class="column">
       <div class="card">
-        <img src="https://www.superprof.com/images/teachers/teacher-home-year-old-mexican-guy-with-spanish-native-language-enthusiastic-and-fun.jpg" alt="" 
+        <img src="./imagens/antoniomini.jpg" alt="" 
         style="width:40%" class="borda">
         <div class="container">
           <h2>Antonio</h2>
           <p class="title">Art Director</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>tony.tota2410@gmail.com</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -79,10 +79,24 @@
           <h2>Danilo</h2>
           <p class="title">Designer</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>danilo.freitas1936@gmail.com</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
     </div>
+    <div class="column">
+      <div class="card">
+        <img src="https://pps.whatsapp.net/v/t61.24694-24/288546958_388790953220328_5107892350256007773_n.jpg?ccb=11-4&oh=01_AdTMYHN16a5uGExWMfv0P6PAQjRNWWwvIuh0c361fCMWsA&oe=635DC080" alt="" style="width:40%;" class="borda">
+        <div class="container">
+          <h2>Caio Richate</h2>
+          <p class="title">Designer</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>caiorichateb@gmail.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+
+      </div>
+    </div>
+
   </div> 
 </html>
