--- a/equipe.html
+++ b/equipe.html
@@ -6,9 +6,10 @@
     <title>Equipe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
+    <link rel="icon" href="./imagens/FavIcon.png">
     <!-- Bootstrap nucleo CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <!-- Estilo do  CSS -->
     <link href="./css/jumbotron.css" rel="stylesheet">
 </head>
@@ -23,11 +24,11 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto" style="position:absolute; right:20px;">
         <li class="nav-item active" >
-          <a class="nav-link" href="index.html" >inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html" >Início <span class="sr-only">(current)</span></a>
         </li>
 
      <li class="nav-item active">
-          <a class="nav-link" href="#">Projeto <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="projeto.html">Projeto <span class="sr-only">(current)</span></a>
         </li>
 
      <li class="nav-item active">
@@ -49,11 +50,11 @@
       <div class="card">
         <img src="./imagens/delasmini.jpg" alt="Ornelas" style="width:40%" class="borda">
         <div class="container">
-          <h2>Gustavo Ornelas</h2>
-          <p class="title">CEO &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h2 style="margin:20px 0px;">Gustavo Ornelas</h2>
+          
+          <p>Estudante, responsável pela área de TI do projeto, desenvolvedor do website.</p>
           <p>gustavo.mariinho06@gmail.com</p>
-          <p><button class="button">Contact</button></p>
+          <p><button class="button">Contato</button></p>
         </div>
       </div>
     </div>
@@ -63,11 +64,11 @@
         <img src="./imagens/antoniomini.jpg" alt="" 
         style="width:40%" class="borda">
         <div class="container">
-          <h2>Antonio</h2>
-          <p class="title">Art Director</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h2 style="margin:20px 0px;">Antônio Carlos</h2>
+          <p class="title"></p>
+          <p>Estudante, responsável pela automação do projeto, idealizador do protótipo.</p>
           <p>tony.tota2410@gmail.com</p>
-          <p><button class="button">Contact</button></p>
+          <p><button class="button">Contato</button></p>
         </div>
       </div>
     </div>
@@ -76,11 +77,11 @@
       <div class="card">
         <img src="https://scontent-gru2-1.xx.fbcdn.net/v/t39.30808-6/283929455_4989758204456085_2646118646958121945_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ARq9vAklDr8AX9A1_rb&_nc_ht=scontent-gru2-1.xx&oh=00_AT94JJRA2VMet4sB7a1dU0nr5kOZVH85599J3AKOTtMZcg&oe=63555857" alt="" style="width:40%;" class="borda">
         <div class="container">
-          <h2>Danilo</h2>
-          <p class="title">Designer</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h2 style="margin:20px 0px;">Danilo Gomes</h2>
+          <p class="title"></p>
+          <p>Administrador da equipe, mecânico, idealizador do protótipo, roterista do pitch.</p>
           <p>danilo.freitas1936@gmail.com</p>
-          <p><button class="button">Contact</button></p>
+          <p><button class="button">Contato</button></p>
         </div>
       </div>
     </div>
@@ -88,11 +89,11 @@
       <div class="card">
         <img src="https://pps.whatsapp.net/v/t61.24694-24/288546958_388790953220328_5107892350256007773_n.jpg?ccb=11-4&oh=01_AdTMYHN16a5uGExWMfv0P6PAQjRNWWwvIuh0c361fCMWsA&oe=635DC080" alt="" style="width:40%;" class="borda">
         <div class="container">
-          <h2>Caio Richate</h2>
-          <p class="title">Designer</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h2 style="margin:20px 0px;">Caio Richate</h2>
+          <p class="title"></p>
+          <p>Estudante, responsável pela segmento de TI do projeto, desenvolvedor do website.</p>
           <p>caiorichateb@gmail.com</p>
-          <p><button class="button">Contact</button></p>
+          <p><button class="button">Contato</button></p>
         </div>
 
       </div>
