--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="./imagens/FavIcon.png">
 
     <title>Digital Trip - ferryboat</title>
-
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
-
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,7 +17,7 @@
     <link href="./css/jumbotron.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body style="font-family:Roboto;">
 			<!-- barra de navegação -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="#" style="font-size:2em;"><span style="color:#0d7fd6;">Digital</span>Trip</a>|
@@ -29,11 +29,11 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto" style="position:absolute; right:20px;">
           <li class="nav-item active" >
-            <a class="nav-link" href="index.html" >inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html" >Início <span class="sr-only">(current)</span></a>
           </li>
 
 	   <li class="nav-item active">
-            <a class="nav-link" href="#">Projeto <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="projeto.html">Projeto <span class="sr-only">(current)</span></a>
           </li>
 
 	   <li class="nav-item active">
@@ -47,12 +47,12 @@
 
     <main role="main">
 
-      <!-- Parte de bem vindo-->
+      <!-- Parte do bem vindo-->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Bem Vindo</h1>
-          <p>Esse é o website oficial da DigitalTrip, aqui você irá encontrar inovação,</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais »</a></p>
+          <h1 class="display-3" style="font-family:Roboto;">Bem Vindo</h1>
+          <p style="font-family:Lato;"; align="justify">Esse é o website oficial da DigitalTrip, aqui você irá encontrar soluções inovadoras, sustentáveis e de alta segurança? <br> Pronto para embarcar nessa nova jornada conosco.</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button" style="margin-top:10px;">Conheça nosso projeto mais recente »</a></p>
         </div>
       </div>
 
@@ -60,19 +60,22 @@
         <!-- parte de baixo -->
         <div class="row">
           <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <h2>Projeto</h2>
+            <p align="justify" >Conversão de ferryboats (balsas) movidos à diesel para elétrico.
+              Além da automatização do sistema de segurança desses veículos.
+            </p>
+            <p><a class="btn btn-secondary" href="#" role="button">Saiba mais »</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Projeto</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary"  href="#" role="button">View details »</a></p>
+            <h2>Pitch</h2>
+            <p align="justify">Conheça melhor sobre o FerryBoat Green por meio de uma breve e resumida apresentação em formato de vídeo.
+            </p>
+            <p><a class="btn btn-secondary"  href="#" role="button">Saiba mais  »</a></p>
           </div>
           <div class="col-md-4">
             <h2>Equipe</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#" role="button">View details »</a></p>
+            <p align="justify">Nós somos a Digital Trip, nosso objetivo é trabalhar por um futuro com transporte sustentável, aliado à tecnologia e energias renováveis.</p>
+            <p><a class="btn btn-secondary" href="equipe.html" role="button">Saiba mais  »</a></p>
           </div>
         </div>
 
@@ -95,4 +98,5 @@
     <script src="./css/bootstrap.min.js.download"></script>
   
 
-</body></html>
+</body>
+</html>
