--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
           <h1 class="display-3" style="font-family:Roboto;">Bem Vindo</h1>
           <p style="font-family:Lato;"; align="justify">Esse é o website oficial da DigitalTrip, aqui você irá encontrar soluções inovadoras, sustentáveis e de alta segurança? <br> Pronto para embarcar nessa nova jornada conosco.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button" style="margin-top:10px;">Conheça nosso projeto mais recente »</a></p>
+          <p><a class="btn btn-primary btn-lg" href="projeto.html" role="button" style="margin-top:10px;">Conheça nosso projeto mais recente »</a></p>
         </div>
       </div>
 
@@ -64,7 +64,7 @@
             <p align="justify" >Conversão de ferryboats (balsas) movidos à diesel para elétrico.
               Além da automatização do sistema de segurança desses veículos.
             </p>
-            <p><a class="btn btn-secondary" href="#" role="button">Saiba mais »</a></p>
+            <p><a class="btn btn-secondary" href="projeto.html" role="button">Saiba mais »</a></p>
           </div>
           <div class="col-md-4">
             <h2>Pitch</h2>
