--- a/equipe.html
+++ b/equipe.html
@@ -14,6 +14,7 @@
     <link href="./css/jumbotron.css" rel="stylesheet">
 </head>
 <!-- barra de navegação -->
+<body style="font-family:Roboto; background-color: #E9ECEF;">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#" style="font-size:2em;"><span style="color:#0d7fd6;">Digital</span>Trip</a>|
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,9 +41,10 @@
          </div>
   </nav>
 
-  <div>
-        <br><br>
-
+<div>
+    <br>
+      <h1 align="center" style="margin-top:15px; font-weight: bold;">Equipe</h1>
+    <br>
 </div>
 
 <div class="row">
@@ -100,4 +102,5 @@
     </div>
 
   </div> 
+  </body>
 </html>
