--- a/projeto.html
+++ b/projeto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe</title>
+    <title>FerryBoat Green</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
     <link rel="icon" href="./imagens/FavIcon.png">
@@ -59,7 +59,7 @@
                     <li>escassez de equipamentos de segurança para passageiros e veículos. </li>
                 </ul>
             </p> 
-            
+
             <p>
                 Buscando solucionar esses problemas descritos, idealizamos a implementação de um sistema automatizado, que será aplicado nas embarcações denominadas FerryBoat (Barco reforçado para o transporte de veículos e passageiros entre as margens de um rio ou para um trecho marítimo curto). 
             </p>
