--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
     <link rel="icon" href="./imagens/FavIcon.png">
 
-    <title>Digital Trip - ferryboat</title>
+    <title>DigitalTrip</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
