--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>Pitch</h2>
             <p align="justify">Conheça melhor sobre o FerryBoat Green por meio de uma breve e resumida apresentação em formato de vídeo.
             </p>
-            <p><a class="btn btn-secondary"  href="#" role="button">Saiba mais  »</a></p>
+            <p><a class="btn btn-secondary"  href="https://www.youtube.com/channel/UCZMa7gGlYgwm3vXtHxTu9Lg" role="button">Saiba mais  »</a></p>
           </div>
           <div class="col-md-4">
             <h2>Equipe</h2>
