--- a/equipe.html
+++ b/equipe.html
@@ -56,7 +56,9 @@
           
           <p>Estudante, responsável pela área de TI do projeto, desenvolvedor do website.</p>
           <p>gustavo.mariinho06@gmail.com</p>
-          <p><button class="button">Contato</button></p>
+            <p>
+              <a href="mailto:gustavo.mariinho06@gmail.com?subject=Olá!"><button class="button">Contato</button> </a>
+            </p>
         </div>
       </div>
     </div>
@@ -70,7 +72,9 @@
           <p class="title"></p>
           <p>Estudante, responsável pela automação do projeto, idealizador do protótipo.</p>
           <p>tony.tota2410@gmail.com</p>
-          <p><button class="button">Contato</button></p>
+          <p>
+            <a href="mailto:tony.tota2410@gmail.com?subject=Olá!"><button class="button">Contato</button> </a>
+          </p>
         </div>
       </div>
     </div>
@@ -83,7 +87,9 @@
           <p class="title"></p>
           <p>Administrador da equipe, mecânico, idealizador do protótipo, roterista do pitch.</p>
           <p>danilo.freitas1936@gmail.com</p>
-          <p><button class="button">Contato</button></p>
+          <p>
+            <a href="mailto:danilo.freitas1936@gmail.com?subject=Olá!"><button class="button">Contato</button> </a>
+          </p>        
         </div>
       </div>
     </div>
@@ -95,7 +101,9 @@
           <p class="title"></p>
           <p>Estudante, responsável pela segmento de TI do projeto, desenvolvedor do website.</p>
           <p>caiorichateb@gmail.com</p>
-          <p><button class="button">Contato</button></p>
+          <p>
+            <a href="mailto:caiorichateb@gmail.com?subject=Olá!"><button class="button">Contato</button> </a>
+          </p>
         </div>
 
       </div>
