--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="jumbotron">
         <div class="container">
           <h1 class="display-3" style="font-family:Roboto;">Bem Vindo</h1>
-          <p style="font-family:Lato;"; align="justify">Esse é o website oficial da DigitalTrip, aqui você irá encontrar soluções inovadoras, sustentáveis e de alta segurança? <br> Pronto para embarcar nessa nova jornada conosco.</p>
+          <p style="font-family:Lato;"; align="justify">Esse é o website oficial da DigitalTrip, aqui você irá encontrar soluções inovadoras, sustentáveis e de alta segurança. <br> Pronto para embarcar nessa nova jornada conosco?</p>
           <p><a class="btn btn-primary btn-lg" href="projeto.html" role="button" style="margin-top:10px;">Conheça nosso projeto mais recente »</a></p>
         </div>
       </div>
